--- a/package.json
+++ b/package.json
@@ -5,16 +5,25 @@
     "scripts": {
         "test": "jest"
     },
+    "peerDependencies": {
+        "react": "^0.14.0 || ^15.0.0 || ^16.0.0"
+    },
     "dependencies": {
-        "downstyle": "^0.1.1",
         "hoist-non-react-statics": "^2.0.0"
     },
     "devDependencies": {
         "babel-jest": "^21.0.2",
+        "babel-plugin-module-resolver": "^2.7.1",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-plugin-transform-decorators-legacy": "^1.3.4",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-preset-env": "^1.6.0",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "enzyme": "^2.9.1",
         "jest": "^21.1.0",
         "react": "^15.6.1",
+        "react-addons-test-utils": "^15.6.0",
         "react-dom": "^15.6.1",
         "react-test-renderer": "^15.6.1"
     }
