--- a/package.json
+++ b/package.json
@@ -2,8 +2,16 @@
     "name": "downtools",
     "version": "0.0.1",
     "description": "Miscellaneous helpers for React",
+    "main": "index.cjs.js",
+    "module": "index.mjs",
+    "browser": "index.umd.js",
     "scripts": {
-        "test": "jest"
+        "test": "jest",
+        "scrub": "babel-node ./build/scrub.js",
+        "assemble": "babel-node ./build/assemble.js",
+        "build": "cross-env NODE_ENV=production npm-run-all scrub build-rollup assemble",
+        "build-rollup": "rollup -c",
+        "dev-rollup": "rollup -c -w"
     },
     "peerDependencies": {
         "react": "^0.14.0 || ^15.0.0 || ^16.0.0"
@@ -12,19 +20,41 @@
         "hoist-non-react-statics": "^2.0.0"
     },
     "devDependencies": {
+        "babel-eslint": "^8.0.0",
         "babel-jest": "^21.0.2",
+        "babel-plugin-add-react-displayname": "^0.0.4",
+        "babel-plugin-external-helpers": "^6.22.0",
         "babel-plugin-module-resolver": "^2.7.1",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-plugin-transform-require-ignore": "^0.1.1",
+        "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.6.0",
         "babel-preset-es2015": "^6.24.1",
+        "babel-preset-es2015-rollup": "^3.0.0",
         "babel-preset-react": "^6.24.1",
+        "babel-register": "^6.26.0",
+        "babel-runtime": "^6.26.0",
+        "babelrc-rollup": "^3.0.0",
+        "cross-env": "^5.0.5",
         "enzyme": "^2.9.1",
+        "eslint": "^4.6.1",
+        "eslint-config-airbnb": "^15.1.0",
+        "eslint-config-prettier": "^2.4.0",
+        "eslint-plugin-import": "^2.7.0",
+        "eslint-plugin-jsx-a11y": "^6.0.2",
+        "eslint-plugin-react": "^7.3.0",
+        "fs-extra": "^4.0.2",
         "jest": "^21.1.0",
+        "npm-run-all": "^4.1.1",
         "react": "^15.6.1",
         "react-addons-test-utils": "^15.6.0",
         "react-dom": "^15.6.1",
-        "react-test-renderer": "^15.6.1"
+        "react-test-renderer": "^15.6.1",
+        "rollup": "^0.49.3",
+        "rollup-plugin-babel": "^3.0.2",
+        "rollup-plugin-commonjs": "^8.2.1",
+        "rollup-plugin-node-resolve": "^3.0.0"
     }
 }
