--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
     "presets": [
+        "babel-preset-react",
         [
             "babel-preset-env",
             {
@@ -7,8 +8,7 @@
                     "node": "current"
                 }
             }
-        ],
-        "babel-preset-react"
+        ]
     ],
     "plugins": [
         "babel-plugin-transform-class-properties",
