Making it look more like a release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "downtools",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "description": "Miscellaneous helpers for React",
     "main": "index.cjs.js",
     "module": "index.mjs",
@@ -9,9 +9,27 @@
         "test": "jest",
         "scrub": "babel-node ./build/scrub.js",
         "assemble": "babel-node ./build/assemble.js",
-        "build": "cross-env NODE_ENV=production npm-run-all scrub build-rollup assemble",
+        "build":
+            "cross-env NODE_ENV=production npm-run-all scrub build-rollup assemble",
         "build-rollup": "rollup -c",
         "dev-rollup": "rollup -c -w"
+    },
+    "keywords": [
+        "react",
+        "reactjs",
+        "hoc",
+        "styles",
+        "theming",
+        "components",
+        "tools",
+        "viewport",
+        "resize"
+    ],
+    "author": "Peter Hurst",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/downplay/downstyle.git"
     },
     "peerDependencies": {
         "react": "^0.14.0 || ^15.0.0 || ^16.0.0"
