--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
         "test": "jest",
         "scrub": "babel-node ./build/scrub.js",
         "assemble": "babel-node ./build/assemble.js",
-        "build":
-            "cross-env NODE_ENV=production npm-run-all scrub build-rollup assemble",
+        "build": "cross-env NODE_ENV=production npm-run-all scrub build-rollup assemble",
         "build-rollup": "rollup -c",
         "dev-rollup": "rollup -c -w"
     },
@@ -36,6 +35,7 @@
         "react": "^15.0.0 || ^16.0.0 || ^17.0.0"
     },
     "dependencies": {
+
         "hoist-non-react-statics": "^2.0.0",
         "url-pattern": "^1.0.0"
     },
@@ -53,8 +53,7 @@
         "babel-plugin-transform-require-ignore": "^0.1.1",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.6.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-es2015-rollup": "^3.0.0",
+
         "babel-preset-react": "^6.24.1",
         "babel-register": "^6.26.0",
         "babel-runtime": "^6.26.0",
@@ -68,7 +67,7 @@
         "eslint-plugin-jsx-a11y": "^6.0.2",
         "eslint-plugin-react": "^7.3.0",
         "fs-extra": "^4.0.2",
-        "jest": "^21.1.0",
+        "jest": "^21.2.1",
         "npm-run-all": "^4.1.1",
         "react": "^15.6.1",
         "react-addons-test-utils": "^15.6.0",
