--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jarl-react",
-    "version": "0.0.7",
+    "version": "0.0.8",
     "description": "Just Another Router Library for React",
     "main": "index.cjs.js",
     "scripts": {
@@ -11,6 +11,10 @@
             "cross-env NODE_ENV=production npm-run-all scrub build-rollup assemble",
         "build-rollup": "rollup -c",
         "dev-rollup": "rollup -c -w"
+    },
+    "jest": {
+        "setupFiles": ["raf/polyfill"],
+        "testRegex": "__tests__/.+\\.test\\.js$"
     },
     "keywords": [
         "react",
@@ -42,7 +46,7 @@
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.0.0",
-        "babel-jest": "^21.0.2",
+        "babel-jest": "^21.2.0",
         "babel-plugin-add-react-displayname": "^0.0.4",
         "babel-plugin-external-helpers": "^6.22.0",
         "babel-plugin-module-resolver": "^3.0.0",
@@ -59,7 +63,8 @@
         "babel-runtime": "^6.26.0",
         "babelrc-rollup": "^3.0.0",
         "cross-env": "^5.0.5",
-        "enzyme": "^3.1.1",
+        "enzyme": "^3.2.0",
+        "enzyme-adapter-react-16": "^1.1.0",
         "eslint": "^4.6.1",
         "eslint-config-airbnb": "^16.1.0",
         "eslint-config-prettier": "^2.4.0",
@@ -67,12 +72,13 @@
         "eslint-plugin-jsx-a11y": "^6.0.2",
         "eslint-plugin-react": "^7.3.0",
         "fs-extra": "^4.0.2",
-        "jest": "^21.1.0",
+        "jest": "^21.2.1",
         "npm-run-all": "^4.1.1",
-        "react": "^16.1.0",
-        "react-addons-test-utils": "^15.6.0",
-        "react-dom": "^16.1.0",
-        "react-test-renderer": "^16.1.0",
+        "raf": "^3.4.0",
+        "react": "^16.2.0",
+        "react-addons-test-utils": "^15.6.2",
+        "react-dom": "^16.2.0",
+        "react-test-renderer": "^16.2.0",
         "rollup": "^0.51.2",
         "rollup-plugin-babel": "^3.0.2",
         "rollup-plugin-commonjs": "^8.2.1",
