Fix dynamic URL resolution

--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
     "name": "jarl-react",
-    "version": "0.0.8",
+    "version": "0.0.9",
     "description": "Just Another Router Library for React",
     "main": "index.cjs.js",
     "scripts": {
         "test": "jest",
         "scrub": "babel-node ./build/scrub.js",
         "assemble": "babel-node ./build/assemble.js",
-        "build":
-            "cross-env NODE_ENV=production npm-run-all scrub build-rollup assemble",
+        "build": "cross-env NODE_ENV=production npm-run-all scrub build-rollup assemble",
         "build-rollup": "rollup -c",
         "dev-rollup": "rollup -c -w"
     },
     "jest": {
-        "setupFiles": ["raf/polyfill"],
+        "setupFiles": [
+            "raf/polyfill"
+        ],
         "testRegex": "__tests__/.+\\.test\\.js$"
     },
     "keywords": [
@@ -40,7 +41,7 @@
     },
     "dependencies": {
         "hoist-non-react-statics": "^2.0.0",
-        "url-pattern": "^1.0.0"
+        "url-pattern": "^1.0.3"
     },
     "devDependencies": {
         "babel-cli": "^6.26.0",
