--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-    "extends": "eslint-config-airbnb",
+    "extends": ["eslint-config-airbnb", "eslint-config-prettier"],
     "parser": "babel-eslint",
     "parserOptions": {
         "ecmaFeatures": {
