--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jarl-react",
-    "version": "0.1.3",
+    "version": "0.2.0",
     "description": "Just Another Router Library for React",
     "main": "index.cjs.js",
     "scripts": {
@@ -9,6 +9,8 @@
         "assemble": "babel-node ./build/assemble.js",
         "build":
             "cross-env NODE_ENV=production npm-run-all scrub build-rollup assemble",
+        "build-dev":
+            "cross-env NODE_ENV=development npm-run-all scrub dev-rollup assemble",
         "build-rollup": "rollup -c",
         "dev-rollup": "rollup -c -w"
     },
@@ -67,7 +69,7 @@
         "enzyme-adapter-react-16": "^1.1.0",
         "eslint": "^4.6.1",
         "eslint-config-airbnb": "^16.1.0",
-        "eslint-config-prettier": "^2.4.0",
+        "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-import": "^2.7.0",
         "eslint-plugin-jsx-a11y": "^6.0.2",
         "eslint-plugin-react": "^7.3.0",
