--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
         "react/jsx-wrap-multilines": 0,
         "comma-dangle": 0,
         "react/jsx-closing-bracket-location": 0,
+        "jsx-a11y/anchor-is-valid": [2, { "components": [] }],
         "jsx-a11y/href-no-hash": 0,
         "react/jsx-filename-extension": 0,
         "import/extensions": 0,
