--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
         "test": "jest",
         "scrub": "babel-node ./build/scrub.js",
         "assemble": "babel-node ./build/assemble.js",
-        "build":
-            "cross-env NODE_ENV=production npm-run-all scrub build-rollup assemble",
-        "build-dev":
-            "cross-env NODE_ENV=development npm-run-all scrub dev-rollup assemble",
+        "build": "cross-env NODE_ENV=production npm-run-all scrub build-rollup assemble",
+        "build-dev": "cross-env NODE_ENV=development npm-run-all scrub dev-rollup assemble",
         "build-rollup": "rollup -c",
         "dev-rollup": "rollup -c -w",
-        "cypress": "cypress open"
+        "cypress": "cypress open",
+        "demo": "parcel demo/demo1/index.html"
     },
     "jest": {
-        "setupFiles": ["raf/polyfill"],
+        "setupFiles": [
+            "raf/polyfill"
+        ],
         "testRegex": "__tests__/.+\\.test\\.js$"
     },
     "keywords": [
@@ -48,8 +49,8 @@
     "devDependencies": {
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
-        "babel-eslint": "^8.0.0",
-        "babel-jest": "^21.2.0",
+        "babel-eslint": "^8.1.0",
+        "babel-jest": "^22.0.4",
         "babel-plugin-add-react-displayname": "^0.0.4",
         "babel-plugin-external-helpers": "^6.22.0",
         "babel-plugin-module-resolver": "^3.0.0",
@@ -58,7 +59,7 @@
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-plugin-transform-require-ignore": "^0.1.1",
         "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-env": "^1.6.0",
+        "babel-preset-env": "^1.6.1",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-es2015-rollup": "^3.0.0",
         "babel-preset-react": "^6.24.1",
@@ -78,6 +79,8 @@
         "fs-extra": "^4.0.2",
         "jest": "^21.2.1",
         "npm-run-all": "^4.1.1",
+        "parcel": "^0.0.1",
+        "parcel-bundler": "^1.3.1",
         "raf": "^3.4.0",
         "react": "^16.2.0",
         "react-addons-test-utils": "^15.6.2",
