--- a/demo/package.json
+++ b/demo/package.json
@@ -6,6 +6,7 @@
         "emotion": "^8.0.12",
         "history": "^4.7.2",
         "react-emotion": "^8.0.12",
+        "react-hot-loader": "^4.0.0-beta.3",
         "react-redux": "^5.0.6",
         "redux": "^3.7.2"
     }
