--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "build-rollup": "rollup -c",
         "dev-rollup": "rollup -c -w",
         "cypress": "cypress open",
-        "demo": "parcel demo/demo1/index.html"
+        "demo": "node ./demo/run"
     },
     "jest": {
         "setupFiles": ["raf/polyfill"],
@@ -78,7 +78,6 @@
         "fs-extra": "^4.0.2",
         "jest": "^21.2.1",
         "npm-run-all": "^4.1.1",
-        "parcel": "^0.0.1",
         "parcel-bundler": "^1.3.1",
         "raf": "^3.4.0",
         "react": "^16.2.0",
