--- a/demo/.babelrc
+++ b/demo/.babelrc
@@ -8,6 +8,7 @@
             "babel-plugin-module-resolver",
             {
                 "alias": {
+                    "jarl-react/redux": "./source/redux",
                     "jarl-react": "./source/index"
                 }
             }
