--- a/demo/package.json
+++ b/demo/package.json
@@ -1,10 +1,16 @@
 {
-    "name": "jarl-react-demo",
-    "version": "0.0.1",
+    "name": "jarl-react-demo-sites",
+    "version": "0.3.0",
+    "scripts": {
+        "cypress": "cypress open",
+        "start": "node ./run"
+    },
     "dependencies": {
         "babel-plugin-emotion": "^8.0.12",
+        "cypress": "^1.3.0",
         "emotion": "^8.0.12",
         "history": "^4.7.2",
+        "parcel-bundler": "^1.3.1",
         "react-emotion": "^8.0.12",
         "react-hot-loader": "^4.0.0-beta.3",
         "react-redux": "^5.0.6",
