--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
-  "lerna": "2.5.1",
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.0.0"
+    "lerna": "2.5.1",
+    "packages": ["packages/*", "demo"],
+    "version": "0.3.0"
 }
