--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -5,16 +5,13 @@
     "main": "index.cjs.js",
     "scripts": {
         "test": "jest",
-        "scrub": "babel-node ./build/scrub.js",
-        "assemble": "babel-node ./build/assemble.js",
+        "scrub": "babel-node ../../build/scrub.js",
         "build":
             "cross-env NODE_ENV=production npm-run-all scrub build-rollup assemble",
         "build-dev":
             "cross-env NODE_ENV=development npm-run-all scrub dev-rollup assemble",
         "build-rollup": "rollup -c",
-        "dev-rollup": "rollup -c -w",
-        "cypress": "cypress open",
-        "demo": "node ./demo/run"
+        "dev-rollup": "rollup -c -w"
     },
     "jest": {
         "setupFiles": ["raf/polyfill"],
@@ -46,39 +43,10 @@
         "hoist-non-react-statics": "^2.0.0"
     },
     "devDependencies": {
-        "babel-cli": "^6.26.0",
-        "babel-core": "^6.26.0",
-        "babel-eslint": "^8.1.0",
-        "babel-jest": "^22.0.4",
-        "babel-plugin-add-react-displayname": "^0.0.4",
-        "babel-plugin-external-helpers": "^6.22.0",
-        "babel-plugin-module-resolver": "^3.0.0",
-        "babel-plugin-transform-class-properties": "^6.24.1",
-        "babel-plugin-transform-decorators-legacy": "^1.3.4",
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-plugin-transform-require-ignore": "^0.1.1",
-        "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-env": "^1.6.1",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-es2015-rollup": "^3.0.0",
-        "babel-preset-react": "^6.24.1",
-        "babel-register": "^6.26.0",
-        "babel-runtime": "^6.26.0",
         "babelrc-rollup": "^3.0.0",
-        "cross-env": "^5.0.5",
-        "cypress": "^1.3.0",
         "enzyme": "^3.2.0",
         "enzyme-adapter-react-16": "^1.1.0",
-        "eslint": "^4.6.1",
-        "eslint-config-airbnb": "^16.1.0",
-        "eslint-config-prettier": "^2.9.0",
-        "eslint-plugin-import": "^2.7.0",
-        "eslint-plugin-jsx-a11y": "^6.0.2",
-        "eslint-plugin-react": "^7.3.0",
-        "fs-extra": "^4.0.2",
         "jest": "^21.2.1",
-        "npm-run-all": "^4.1.1",
-        "parcel-bundler": "^1.3.1",
         "raf": "^3.4.0",
         "react": "^16.2.0",
         "react-addons-test-utils": "^15.6.2",
@@ -87,6 +55,7 @@
         "rollup": "^0.51.2",
         "rollup-plugin-babel": "^3.0.2",
         "rollup-plugin-commonjs": "^8.2.1",
-        "rollup-plugin-node-resolve": "^3.0.0"
+        "rollup-plugin-node-resolve": "^3.0.0",
+        "babel-jest": "^22.0.4"
     }
 }
