--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -5,14 +5,26 @@
     "main": "index.cjs.js",
     "scripts": {
         "test": "jest",
-        "scrub": "babel-node ../../build/scrub.js",
-        "build":
-            "cross-env NODE_ENV=production npm-run-all scrub build-rollup assemble",
-        "build-dev":
-            "cross-env NODE_ENV=development npm-run-all scrub dev-rollup assemble",
-        "build-rollup": "rollup -c",
-        "dev-rollup": "rollup -c -w"
+        "build": "node ./tools/build.js",
+        "watch": "babel ./source -d . --ignore __tests__ --watch",
+        "prepublishOnly": "node ./tools/build.js",
+        "clean": "git clean -fdX .",
+        "lint": "eslint source"
     },
+    "files": [
+        "es",
+        "umd",
+        "lib",
+        "hocFactory.js",
+        "index.js",
+        "Link.js",
+        "NavigationProvider.js",
+        "RouteMapper.js",
+        "SimpleProvider.js",
+        "withActive.js",
+        "withNavigate.js",
+        "withState.js"
+    ],
     "jest": {
         "setupFiles": ["raf/polyfill"],
         "testRegex": "__tests__/.+\\.test\\.js$"
@@ -36,26 +48,29 @@
         "url": "https://github.com/downplay/jarl-react.git"
     },
     "peerDependencies": {
-        "prop-types": "^15.0.0 || ^16.0.0 || ^17.0.0",
-        "react": "^15.0.0 || ^16.0.0 || ^17.0.0"
+        "react": ">=15"
     },
     "dependencies": {
         "hoist-non-react-statics": "^2.0.0"
     },
     "devDependencies": {
+        "babel-jest": "^22.0.4",
         "babelrc-rollup": "^3.0.0",
         "enzyme": "^3.2.0",
         "enzyme-adapter-react-16": "^1.1.0",
+        "gzip-size": "^4.1.0",
         "jest": "^21.2.1",
+        "pretty-bytes": "^4.0.2",
         "raf": "^3.4.0",
         "react": "^16.2.0",
         "react-addons-test-utils": "^15.6.2",
         "react-dom": "^16.2.0",
         "react-test-renderer": "^16.2.0",
-        "rollup": "^0.51.2",
+        "rollup": "^0.53.0",
         "rollup-plugin-babel": "^3.0.2",
-        "rollup-plugin-commonjs": "^8.2.1",
+        "rollup-plugin-commonjs": "^8.2.6",
         "rollup-plugin-node-resolve": "^3.0.0",
-        "babel-jest": "^22.0.4"
+        "rollup-plugin-replace": "^2.0.0",
+        "rollup-plugin-uglify": "^2.0.1"
     }
 }
