--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -2,6 +2,11 @@
     "name": "jarl-react",
     "version": "0.3.0",
     "description": "Just Another Router Library for React",
+    "main": "index.js",
+    "module": "es/index.js",
+    "browserify": {
+        "transform": ["loose-envify"]
+    },
     "scripts": {
         "test": "jest",
         "build": "node ./tools/build.js",
@@ -47,7 +52,8 @@
         "url": "https://github.com/downplay/jarl-react.git"
     },
     "peerDependencies": {
-        "react": ">=15"
+        "react": ">=15",
+        "prop-types": ">=15"
     },
     "dependencies": {
         "hoist-non-react-statics": "^2.0.0"
@@ -70,6 +76,7 @@
         "rollup-plugin-commonjs": "^8.2.6",
         "rollup-plugin-node-resolve": "^3.0.0",
         "rollup-plugin-replace": "^2.0.0",
-        "rollup-plugin-uglify": "^2.0.1"
+        "rollup-plugin-uglify": "^2.0.1",
+        "uglify-es": "^3.3.2"
     }
 }
