--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,8 @@
 {
-    "lerna": "2.5.1",
-    "packages": ["packages/jarl-react", "packages/jarl-react-redux"],
-    "version": "0.3.0"
+  "lerna": "2.5.1",
+  "packages": [
+    "packages/jarl-react",
+    "packages/jarl-react-redux"
+  ],
+  "version": "0.3.0"
 }
