--- a/demo/package.json
+++ b/demo/package.json
@@ -1,16 +1,23 @@
 {
+    "private": true,
     "name": "jarl-react-demo-sites",
     "version": "0.3.0",
     "scripts": {
         "cypress": "cypress open",
-        "start": "node ./run"
+        "start": "node ./tools/run",
+        "clean": "git clean -fdX ."
     },
     "dependencies": {
         "babel-plugin-emotion": "^8.0.12",
         "cypress": "^1.3.0",
         "emotion": "^8.0.12",
         "history": "^4.7.2",
+        "jarl-react": "^0.3.1",
+        "jarl-react-redux": "^0.3.1",
         "parcel-bundler": "^1.3.1",
+        "prop-types": "^15.6.0",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
         "react-emotion": "^8.0.12",
         "react-hot-loader": "^4.0.0-beta.3",
         "react-redux": "^5.0.6",
