--- a/packages/jarl-react-redux/package.json
+++ b/packages/jarl-react-redux/package.json
@@ -59,6 +59,7 @@
         "jarl-react": "^0.3.1"
     },
     "devDependencies": {
+        "babel-cli": "^6.26.0",
         "babel-jest": "^22.0.4",
         "babelrc-rollup": "^3.0.0",
         "enzyme": "^3.2.0",
