--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,9 @@
 {
-    "lerna": "2.5.1",
-    "packages": ["packages/jarl-react", "packages/jarl-react-redux", "demo"],
-    "version": "0.3.1"
+  "lerna": "2.5.1",
+  "packages": [
+    "packages/jarl-react",
+    "packages/jarl-react-redux",
+    "demo"
+  ],
+  "version": "0.3.2"
 }
