--- a/packages/jarl-react-redux/package.json
+++ b/packages/jarl-react-redux/package.json
@@ -1,11 +1,13 @@
 {
     "name": "jarl-react-redux",
-    "version": "0.3.1",
+    "version": "0.3.2",
     "description": "Redux integration for jarl-react",
     "main": "index.js",
     "module": "es/index.js",
     "browserify": {
-        "transform": ["loose-envify"]
+        "transform": [
+            "loose-envify"
+        ]
     },
     "scripts": {
         "test": "jest",
@@ -25,7 +27,9 @@
         "reducer.js"
     ],
     "jest": {
-        "setupFiles": ["raf/polyfill"],
+        "setupFiles": [
+            "raf/polyfill"
+        ],
         "testRegex": "__tests__/.+\\.test\\.js$"
     },
     "keywords": [
@@ -52,7 +56,7 @@
     },
     "dependencies": {
         "invariant": "^2.2.2",
-        "jarl-react": "^0.3.1",
+        "jarl-react": "^0.3.2",
         "prop-types": "^15.6.0"
     },
     "devDependencies": {
