--- a/demo/package.json
+++ b/demo/package.json
@@ -4,7 +4,8 @@
     "version": "0.3.3",
     "scripts": {
         "cypress": "cypress open",
-        "start": "node ./tools/run",
+        "start": "parcel ./source/index.html",
+        "build": "parcel build ./source/index.js",
         "clean": "git clean -fdX ."
     },
     "dependencies": {
@@ -14,7 +15,7 @@
         "history": "^4.7.2",
         "jarl-react": "^0.3.3",
         "jarl-react-redux": "^0.3.3",
-        "parcel-bundler": "^1.3.1",
+        "parcel-bundler": "^1.5.1",
         "prop-types": "^15.6.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
