--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.1.0",
         "babel-plugin-add-react-displayname": "^0.0.4",
+        "babel-plugin-dev-expression": "^0.2.1",
         "babel-plugin-external-helpers": "^6.22.0",
         "babel-plugin-module-resolver": "^3.0.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
         "babel-plugin-transform-require-ignore": "^0.1.1",
         "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-plugin-dev-expression": "^0.2.1",
-        "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
         "babel-preset-env": "^1.6.1",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-es2015-rollup": "^3.0.0",
         "babel-preset-react": "^6.24.1",
         "babel-register": "^6.26.0",
         "babel-runtime": "^6.26.0",
-        "cross-env": "^5.0.5",
         "eslint": "^4.6.1",
         "eslint-config-airbnb": "^16.1.0",
         "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-import": "^2.7.0",
         "eslint-plugin-jsx-a11y": "^6.0.2",
         "eslint-plugin-react": "^7.3.0",
-        "fs-extra": "^4.0.2",
-        "lerna": "^2.5.1",
-        "npm-run-all": "^4.1.1"
+        "lerna": "^2.5.1"
+    },
+    "dependencies": {
+        "react-hot-loader": "^4.0.0-beta.18"
     }
 }
