Add helmet and emotion

--- a/demo/.babelrc
+++ b/demo/.babelrc
@@ -4,5 +4,15 @@
         "react-hot-loader/babel",
         "babel-plugin-transform-class-properties",
         "babel-plugin-transform-object-rest-spread"
-    ]
+    ],
+    "env": {
+        "development": {
+            "plugins": [
+                ["babel-plugin-emotion", { sourceMap: true, autoLabel: true }]
+            ]
+        },
+        "production": {
+            "plugins": ["babel-plugin-emotion"]
+        }
+    }
 }
