--- a/demo/package.json
+++ b/demo/package.json
@@ -9,19 +9,22 @@
         "clean": "git clean -fdX ."
     },
     "dependencies": {
-        "babel-plugin-emotion": "^8.0.12",
-        "cypress": "^1.3.0",
         "emotion": "^8.0.12",
         "history": "^4.7.2",
         "jarl-react": "^0.3.3",
         "jarl-react-redux": "^0.3.3",
-        "parcel-bundler": "^1.5.1",
         "prop-types": "^15.6.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-emotion": "^8.0.12",
+        "react-helmet": "^5.2.0",
         "react-hot-loader": "^4.0.0-beta.3",
         "react-redux": "^5.0.6",
         "redux": "^3.7.2"
+    },
+    "devDependencies": {
+        "cypress": "^1.3.0",
+        "parcel-bundler": "^1.5.1",
+        "babel-plugin-emotion": "^8.0.12"
     }
 }
