--- a/demo/package.json
+++ b/demo/package.json
@@ -20,11 +20,12 @@
         "react-helmet": "^5.2.0",
         "react-hot-loader": "^4.0.0-beta.3",
         "react-redux": "^5.0.6",
+        "recompose": "^0.26.0",
         "redux": "^3.7.2"
     },
     "devDependencies": {
+        "babel-plugin-emotion": "^8.0.12",
         "cypress": "^1.3.0",
-        "parcel-bundler": "^1.5.1",
-        "babel-plugin-emotion": "^8.0.12"
+        "parcel-bundler": "^1.5.1"
     }
 }
