[JARL] Breaking: renamed `withState` -> `withLocation`
Avoids naming conflict with recompose, and was a generally confusing
name anyway

--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -27,7 +27,7 @@
         "SimpleProvider.js",
         "withActive.js",
         "withNavigate.js",
-        "withState.js",
+        "withLocation.js",
         "withContext.js"
     ],
     "jest": {
