--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -5,7 +5,9 @@
     "main": "index.js",
     "module": "es/index.js",
     "browserify": {
-        "transform": ["loose-envify"]
+        "transform": [
+            "loose-envify"
+        ]
     },
     "scripts": {
         "test": "jest --watch",
@@ -31,7 +33,9 @@
         "withContext.js"
     ],
     "jest": {
-        "setupFiles": ["raf/polyfill"],
+        "setupFiles": [
+            "raf/polyfill"
+        ],
         "testRegex": "__tests__/.+\\.test\\.js$"
     },
     "keywords": [
@@ -66,7 +70,7 @@
         "enzyme": "^3.2.0",
         "enzyme-adapter-react-16": "^1.1.0",
         "gzip-size": "^4.1.0",
-        "jest": "^21.2.1",
+        "jest": "^22.1.4",
         "pretty-bytes": "^4.0.2",
         "raf": "^3.4.0",
         "react": "^16.2.0",
