--- a/packages/jarl-react-redux/package.json
+++ b/packages/jarl-react-redux/package.json
@@ -4,11 +4,6 @@
     "description": "Redux integration for jarl-react",
     "main": "index.js",
     "module": "es/index.js",
-    "browserify": {
-        "transform": [
-            "loose-envify"
-        ]
-    },
     "scripts": {
         "test": "jest",
         "build": "node ./tools/build.js",
@@ -27,9 +22,7 @@
         "reducer.js"
     ],
     "jest": {
-        "setupFiles": [
-            "raf/polyfill"
-        ],
+        "setupFiles": ["raf/polyfill"],
         "testRegex": "__tests__/.+\\.test\\.js$"
     },
     "keywords": [
