--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -4,11 +4,6 @@
     "description": "Just Another Router Library for React",
     "main": "index.js",
     "module": "es/index.js",
-    "browserify": {
-        "transform": [
-            "loose-envify"
-        ]
-    },
     "scripts": {
         "test": "jest --watch",
         "build": "node ./tools/build.js",
@@ -33,9 +28,7 @@
         "withContext.js"
     ],
     "jest": {
-        "setupFiles": [
-            "raf/polyfill"
-        ],
+        "setupFiles": ["raf/polyfill"],
         "testRegex": "__tests__/.+\\.test\\.js$"
     },
     "keywords": [
