Sort files in package.json

--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -16,16 +16,16 @@
         "es",
         "umd",
         "lib",
-        "hocFactory.js",
         "index.js",
+        "hocFactory.js",
         "Link.js",
         "NavigationProvider.js",
         "RouteMapper.js",
         "SimpleProvider.js",
         "withActive.js",
+        "withContext.js",
         "withNavigate.js",
-        "withLocation.js",
-        "withContext.js"
+        "withLocation.js"
     ],
     "jest": {
         "setupFiles": ["raf/polyfill"],
