--- a/demo/.babelrc
+++ b/demo/.babelrc
@@ -1,5 +1,5 @@
 {
-    "presets": ["babel-preset-react", "babel-preset-env"],
+    "presets": ["babel-preset-env", "babel-preset-react"],
     "plugins": [
         "react-hot-loader/babel",
         "babel-plugin-transform-class-properties",
