Attempt to fix webpack execution, ran into lerna limitations

--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -21,6 +21,7 @@
         "hocFactory.js",
         "Link.js",
         "NavigationProvider.js",
+        "redirect.js",
         "RouteMapper.js",
         "SimpleProvider.js",
         "withActive.js",
