--- a/demo/.babelrc
+++ b/demo/.babelrc
@@ -1,21 +1,7 @@
 {
-    "presets": ["babel-preset-env", "babel-preset-react"],
+    "presets": ["babel-preset-env"],
     "plugins": [
-        "react-hot-loader/babel",
         "babel-plugin-transform-class-properties",
         "babel-plugin-transform-object-rest-spread"
-    ],
-    "env": {
-        "development": {
-            "plugins": [
-                [
-                    "babel-plugin-emotion",
-                    { "sourceMap": true, "autoLabel": true }
-                ]
-            ]
-        },
-        "production": {
-            "plugins": ["babel-plugin-emotion"]
-        }
-    }
+    ]
 }
