--- a/demo/package.json
+++ b/demo/package.json
@@ -27,10 +27,12 @@
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.1.0",
+        "babel-loader": "^7.1.2",
         "babel-plugin-add-react-displayname": "^0.0.4",
         "babel-plugin-emotion": "^8.0.12",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-plugin-transform-react-stateless-component-name": "^1.1.2",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.24.1",
