--- a/demo/package.json
+++ b/demo/package.json
@@ -30,6 +30,7 @@
         "babel-loader": "^7.1.2",
         "babel-plugin-add-react-displayname": "^0.0.4",
         "babel-plugin-emotion": "^8.0.12",
+        "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-plugin-transform-react-stateless-component-name": "^1.1.2",
