--- a/demo/package.json
+++ b/demo/package.json
@@ -42,6 +42,7 @@
         "cypress": "^1.4.2",
         "extract-text-webpack-plugin": "^3.0.2",
         "opn": "^5.2.0",
+        "raw-loader": "^0.5.1",
         "react-hot-loader": "^4.0.0-beta.21",
         "webpack": "^3.11.0",
         "webpack-bundle-analyzer": "^2.10.0",
