--- a/.eslintrc
+++ b/.eslintrc
@@ -42,6 +42,8 @@
         "no-confusing-arrow": 0,
         "no-cond-assign": 0,
         "no-mixed-operators": 0,
-        "prefer-destructuring": 0
+        "prefer-destructuring": 0,
+        "jsx-a11y/click-events-have-key-events": 0,
+        "jsx-a11y/no-noninteractive-element-interactions": 0
     }
 }
