--- a/demo/package.json
+++ b/demo/package.json
@@ -43,12 +43,12 @@
         "extract-text-webpack-plugin": "^3.0.2",
         "opn": "^5.2.0",
         "raw-loader": "^0.5.1",
-        "react-hot-loader": "^4.0.0-beta.21",
-        "webpack": "^3.11.0",
-        "webpack-bundle-analyzer": "^2.10.0",
-        "webpack-cli": "^2.0.4",
-        "webpack-dev-middleware": "^2.0.5",
-        "webpack-hot-middleware": "^2.21.0",
-        "webpack-manifest-plugin": "^1.3.2"
+        "react-hot-loader": "^4.0.0",
+        "webpack": "^4.1.0",
+        "webpack-bundle-analyzer": "^2.11.1",
+        "webpack-cli": "^2.0.10",
+        "webpack-dev-middleware": "^3.0.0",
+        "webpack-hot-middleware": "^2.21.2",
+        "webpack-manifest-plugin": "^2.0.0-rc.2"
     }
 }
