--- a/packages/jarl-react-redux/package.json
+++ b/packages/jarl-react-redux/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jarl-react-redux",
-    "version": "0.7.2",
+    "version": "0.8.0",
     "description": "Redux integration for jarl-react",
     "main": "index.js",
     "module": "es/index.js",
@@ -23,7 +23,9 @@
         "reducer.js"
     ],
     "jest": {
-        "setupFiles": ["raf/polyfill"],
+        "setupFiles": [
+            "raf/polyfill"
+        ],
         "testRegex": "__tests__/.+\\.test\\.js$"
     },
     "keywords": [
@@ -50,7 +52,7 @@
     },
     "dependencies": {
         "invariant": "^2.2.2",
-        "jarl-react": "^0.7.2",
+        "jarl-react": "^0.8.0",
         "prop-types": "^15.6.0"
     },
     "devDependencies": {
