--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jarl-react",
-    "version": "0.7.2",
+    "version": "0.8.0",
     "description": "Just Another Router Library for React",
     "main": "index.js",
     "module": "es/index.js",
@@ -31,7 +31,9 @@
         "withLocation.js"
     ],
     "jest": {
-        "setupFiles": ["raf/polyfill"],
+        "setupFiles": [
+            "raf/polyfill"
+        ],
         "testRegex": "__tests__/.+\\.test\\.js$"
     },
     "keywords": [
