Added Router function-as-child component

--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -24,6 +24,7 @@
         "redirect.js",
         "routing.js",
         "RouteMapper.js",
+        "Router.js",
         "SimpleProvider.js"
     ],
     "jest": {
