Rename RouteMapper to RouteMap and call it a day with renaming
Agonizing too much over changing things like state, context, match, stringify.

Actually these terms seem reasonable and can make it very clear what they are with documentation. `state` will only be using as a Route property, everywhere else should refer to `location`, which actually means the finished merged location after state->match->resolve processing.

--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -23,7 +23,7 @@
         "RoutingProvider.js",
         "redirect.js",
         "routing.js",
-        "RouteMapper.js",
+        "RouteMap.js",
         "Router.js",
         "StateProvider.js"
     ],
