--- a/packages/jarl-react-native/package.json
+++ b/packages/jarl-react-native/package.json
@@ -1,30 +1,24 @@
 {
-    "name": "jarl-react-redux",
+    "name": "jarl-react-native",
     "version": "0.8.0",
-    "description": "Redux integration for JARL",
+    "description": "React Native support for JARL",
     "main": "index.js",
     "module": "es/index.js",
     "sideEffects": false,
     "scripts": {
-        "test": "jest",
+        "test": "jest --watch",
         "build": "node ./tools/build.js",
         "watch": "babel ./source -d . --ignore __tests__ --watch",
         "prepublishOnly": "node ./tools/build.js",
         "clean": "git clean -fdX .",
-        "lint": "eslint source"
+        "lint": "eslint source",
+        "coverage": "jest --coverage"
     },
-    "files": [
-        "es",
-        "umd",
-        "index.js",
-        "actions.js",
-        "defines.js",
-        "Provider.js",
-        "reducer.js"
-    ],
+    "files": ["es", "umd", "lib", "index.js"],
     "jest": {
         "setupFiles": ["raf/polyfill"],
-        "testRegex": "__tests__/.+\\.test\\.js$"
+        "testRegex": "__tests__/.+\\.test\\.js$",
+        "collectCoverageFrom": ["source/*.js", "source/lib/*.js"]
     },
     "keywords": [
         "react",
@@ -36,8 +30,7 @@
         "tools",
         "url",
         "history",
-        "ssr",
-        "redux"
+        "ssr"
     ],
     "author": "Peter Hurst",
     "license": "MIT",
@@ -46,21 +39,23 @@
         "url": "https://github.com/downplay/jarl-react.git"
     },
     "peerDependencies": {
+        "prop-types": ">=15",
         "react": ">=15"
     },
     "dependencies": {
-        "invariant": "^2.2.2",
-        "jarl-react": "^0.8.0",
-        "prop-types": "^15.6.0"
+        "hoist-non-react-statics": "^2.0.0",
+        "invariant": "^2.2.4",
+        "qs": "^6.5.1",
+        "warning": "^3.0.0"
     },
     "devDependencies": {
-        "babel-cli": "^6.26.0",
         "babel-jest": "^22.0.4",
         "babelrc-rollup": "^3.0.0",
+        "date-fns": "^1.29.0",
         "enzyme": "^3.2.0",
         "enzyme-adapter-react-16": "^1.1.0",
         "gzip-size": "^4.1.0",
-        "jest": "^21.2.1",
+        "jest": "^22.1.4",
         "pretty-bytes": "^4.0.2",
         "raf": "^3.4.0",
         "react": "^16.2.0",
