--- a/packages/jarl-react-native/package.json
+++ b/packages/jarl-react-native/package.json
@@ -14,7 +14,7 @@
         "lint": "eslint source",
         "coverage": "jest --coverage"
     },
-    "files": ["es", "umd", "lib", "index.js"],
+    "files": ["es", "umd", "lib", "index.js", "Link.js", "NativeProvider.js"],
     "jest": {
         "setupFiles": ["raf/polyfill"],
         "testRegex": "__tests__/.+\\.test\\.js$",
@@ -45,6 +45,7 @@
         "history": "^4.7.2",
         "hoist-non-react-statics": "^2.0.0",
         "invariant": "^2.2.4",
+        "jarl-react": "^0.8.0",
         "qs": "^6.5.1",
         "warning": "^3.0.0"
     },
