--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jarl-react",
-    "version": "1.0.0-0",
+    "version": "1.0.0-alpha.2",
     "description": "Just Another Router Library for React",
     "main": "index.js",
     "module": "es/index.js",
